--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Mongo configuration
-MONGO_DEVELOPMENT=
-MONGO_PRODUCTION=
+MONGO_DEVELOPMENT=mongodb+srv://caio:caio1234@cluster0.xb0g2.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGO_PRODUCTION=mongodb+srv://caio:caio1234@cluster0.xb0g2.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
 # Mysql configuration
 DB_USER=
